feat: SystemLogs base setup