@@ -1,24 +1,36 @@
 package com.usfbs.springboot.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class CorsConfig {
+  
+  @Value("${cors.allowed-origins}")
+  private String allowedOrigins;
+  
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration cfg = new CorsConfiguration();
-    cfg.setAllowedOrigins(List.of("http://localhost:5173")); 
+    
+    // Parse allowed origins from application.yaml
+    List<String> origins = Arrays.asList(allowedOrigins.split(","));
+    cfg.setAllowedOrigins(origins);
+    
     cfg.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS"));
     cfg.setAllowedHeaders(List.of("*"));
     cfg.setAllowCredentials(true);        
+    
     UrlBasedCorsConfigurationSource src = new UrlBasedCorsConfigurationSource();
-    src.registerCorsConfiguration("/api/**", cfg);
+    src.registerCorsConfiguration("/**", cfg); // Apply to all endpoints
+    
     return src;
   }
 }
